--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "history": "^1.17.0",
     "mongoose": "^5.2.7",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
