--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "backend": "nodemon server/index.js --exec babel-node --presets es2015,stage-2",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "redux": "^4.0.0"
   }
 }
